--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Mainpage
                 </h1>
             <div class="quote">
                 <p>
-                Life isn't about finding myself.<br/>
-                Life is about creating myself.  
+                Life isn't about finding yourself.<br/>
+                Life is about creating yourself.  
                 </p>
                 <div class="author">
                     George Bernard Shaw
